--- a/otp_cheatsheet.adoc
+++ b/otp_cheatsheet.adoc
@@ -3,6 +3,9 @@
 [.logo]
 image:img/erlang-logo.svg[Erlang e logo]
 
+[.subscript]
+The details of OTP that you may have forgotten or never known!
+
 == Behaviors
 
 [%autowidth, options="header"]
@@ -14,52 +17,73 @@ image:img/erlang-logo.svg[Erlang e logo]
 |supervisor |For implementing a supervisor in a supervision tree
 |=================
 
-== Callbacks
+== Supervisors
+
+=== link:http://erlang.org/doc/design_principles/sup_princ.html#maximum-restart-intensity[Restart Intensity]
+
+The supervisor's maximum restart intensity limits the number of restarts that can occur within a given amount of time. Restart intensity is specified as a map with two keys:
+
+`intensity` :: The number of restarts permitted within the defined `period`
+`period` :: The time period in seconds in which the maximum number of restarts permitted by `intensity`
+
+[.child-specs]
+=== link:http://erlang.org/doc/design_principles/sup_princ.html#child-specification[Child Specs]
+
+Child specs are maps with the following keys:
 
 [%autowidth, options="header"]
 |=================
-|Callback |Behaviors |Purpose
+|Key |Optional |Description
+|`id` |required |An identifer to use for the process
+|`start` |required |The MFA to use to start the process
+|`restart` |optional |See the restart types
+|`shutdown` |  optional |`brutal_kill` or an integer timeout for workers. Must be `infinity` for supervisors.
+|`type` | optional| See the child types
+|`modules` | optional| The callback module if there is one
 |=================
 
-== Supervisors
+[.child-types]
+=== Child Types
 
-Structuring processes in an OTP application is done using a supervision tree. A supervision tree is comprised of supervisors (branches) and workers (leaves). Supervisors can be nested to create any tree structure needed. Crashes bubble up the tree from the worker nodes to their supervisor. Supervisors either the.
+`worker` :: Any process that is not another supervisor
+`supervisor` :: A supervisor process that is a child of the supervisor
 
-=== Children
+[.restart-types]
+=== Restart Types
 
-Workers :: Something
+`permanent` :: The process is always restarted
+`temporary` :: The process is never restarted
+`transient` :: The process is only restarted if it terminates abnormally
 
-Supervisors :: Something else
 
-==== Child Specs
-
-`child_spec() = #{id => child_id(),       % mandatory
-                 start => mfargs(),      % mandatory
-                 restart => restart(),   % optional
-                 shutdown => shutdown(), % optional
-                 type => worker(),       % optional
-                 modules => modules()}   % optional`
-
+[.restart-strategies]
 === Restart Strategies
 
 [%autowidth, options="header"]
 |=================
 |Strategy |Description
-|one_for_one |If one child process crashes only restart that process
-|one_for_all |If one child process crashes all other child processes are terminated and all of them are restarted
-|rest_for_one |If one child process crashes the rest of the child processes are terminated and the crashes process and other terminated processes are restarted
-|simple_one_for_one |Just like the one_for_one strategy, but it can only start one kind of child process, and all child processes are added dynamically
+|`one_for_one` |If one child process crashes only restart that process
+|`one_for_all` |If one child process crashes all other child processes are terminated and all of them are restarted
+|`rest_for_one` |If one child process crashes the rest of the child processes are terminated and the crashes process and other terminated processes are restarted
+|`simple_one_for_one` |Just like the one_for_one strategy, but it can only start one kind of child process, and all child processes are added dynamically
 |=================
 
-=== Restart
 
-== Applications
+== link:http://erlang.org/doc/design_principles/applications.html[Applications]
+
+[options="header", cols="12,~"]
+|=================
+|Start Types |Affect on Runtime when Application Terminates
+|`temporary` |Termination is reported but no other applications are terminated
+|`transient` |If the application terminates with reason `normal` termination is reported and no other applications are terminated. If application terminates with any other reason all other applications and the runtime system are terminated.
+|`permanent` |All other applications and the runtime system are terminated
+|=================
 
 [%autowidth, options="header"]
 |=================
-|temporary
-|transient
-|permanent
+|Application Types
+|*Applications* Regular applications define their own supervision tree and have their own modules and processes. They must implement the application callback behavior and specify the callback module in the `mod` key in the application resource file.
+|*Libraries* Is a simple collection of modules and doesn't implement an application behavior callback module
 |=================
 
 [[footer]]
