--- a/otp_cheatsheet.adoc
+++ b/otp_cheatsheet.adoc
@@ -8,9 +8,8 @@ The details of OTP that you may have forgotten or never known!
 
 == Behaviors
 
-[%autowidth, options="header"]
+[%autowidth]
 |=================
-|Behavior |Purpose
 |gen_server |For implementing the server of a client-server relation
 |gen_statem |For implementing state machines
 |gen_event |For implementing event handling functionality
@@ -21,10 +20,7 @@ The details of OTP that you may have forgotten or never known!
 
 === link:http://erlang.org/doc/design_principles/sup_princ.html#maximum-restart-intensity[Restart Intensity]
 
-The supervisor's maximum restart intensity limits the number of restarts that can occur within a given amount of time. Restart intensity is specified as a map with two keys:
-
-`intensity` :: The number of restarts permitted within the defined `period`
-`period` :: The time period in seconds in which the maximum number of restarts permitted by `intensity`
+The supervisor's maximum restart intensity limits the number of restarts that can occur within a given amount of time. Restart intensity is specified as a map with two keys: `intensity` - The number of restarts permitted within the defined `period`, and `period` - The time period in seconds in which the maximum number of restarts permitted by `intensity`.
 
 [.child-specs]
 === link:http://erlang.org/doc/design_principles/sup_princ.html#child-specification[Child Specs]
@@ -45,15 +41,21 @@ Child specs are maps with the following keys:
 [.child-types]
 === Child Types
 
-`worker` :: Any process that is not another supervisor
-`supervisor` :: A supervisor process that is a child of the supervisor
+[%autowidth]
+|=================
+| `worker` |Any process that is not another supervisor
+| `supervisor` |A supervisor process that is a child of the supervisor
+|=================
 
 [.restart-types]
 === Restart Types
 
-`permanent` :: The process is always restarted
-`temporary` :: The process is never restarted
-`transient` :: The process is only restarted if it terminates abnormally
+[%autowidth]
+|=================
+|`permanent` |The process is always restarted
+|`temporary` |The process is never restarted
+|`transient` |The process is only restarted if it terminates abnormally
+|=================
 
 
 [.restart-strategies]
@@ -64,26 +66,26 @@ Child specs are maps with the following keys:
 |Strategy |Description
 |`one_for_one` |If one child process crashes only restart that process
 |`one_for_all` |If one child process crashes all other child processes are terminated and all of them are restarted
-|`rest_for_one` |If one child process crashes the rest of the child processes are terminated and the crashes process and other terminated processes are restarted
+|`rest_for_one` |If one child process crashes the rest of the child processes are terminated and the crashed process and other terminated processes are restarted
 |`simple_one_for_one` |Just like the one_for_one strategy, but it can only start one kind of child process, and all child processes are added dynamically
 |=================
 
 
 == link:http://erlang.org/doc/design_principles/applications.html[Applications]
 
+[%autowidth, options="header"]
+|=================
+2+|Application Types
+|*Applications* |Regular applications define their own supervision tree and have their own modules and processes. They must implement the application callback behavior and specify the callback module in the `mod` key in the application resource file.
+|*Libraries* |Is a simple collection of modules and doesn't implement an application behavior callback module
+|=================
+
 [options="header", cols="12,~"]
 |=================
 |Start Types |Affect on Runtime when Application Terminates
 |`temporary` |Termination is reported but no other applications are terminated
-|`transient` |If the application terminates with reason `normal` termination is reported and no other applications are terminated. If application terminates with any other reason all other applications and the runtime system are terminated.
+|`transient` |If application terminates abnormally all other applications and the runtime system are terminated
 |`permanent` |All other applications and the runtime system are terminated
-|=================
-
-[%autowidth, options="header"]
-|=================
-|Application Types
-|*Applications* Regular applications define their own supervision tree and have their own modules and processes. They must implement the application callback behavior and specify the callback module in the `mod` key in the application resource file.
-|*Libraries* Is a simple collection of modules and doesn't implement an application behavior callback module
 |=================
 
 [[footer]]
