Add sigils table to Elixir cheatsheet

--- a/elixir_cheatsheet.adoc
+++ b/elixir_cheatsheet.adoc
@@ -5,6 +5,17 @@ image:img/erlang-logo.svg[Erlang e logo]
 
 == Sigils
 
+|=================
+|Behavior |Purpose
+|`~r` |Regular Expression
+|`~s` |String
+|`~c` |Char list
+|`~w()s` |Word list of strings
+|`~w()c` |Word list of char lists
+|`~w()a` |Word list of atoms
+|=================
+
+
 == Streams?
 
 == Protocols?
