--- a/elixir_cheatsheet.adoc
+++ b/elixir_cheatsheet.adoc
@@ -5,16 +5,20 @@ image:img/erlang-logo.svg[Erlang e logo]
 
 == Sigils
 
+https://elixir-lang.org/getting-started/sigils.html
+
+[%autowidth, options="header"]
 |=================
-|Behavior |Purpose
-|`~r` |Regular Expression
-|`~s` |String
-|`~c` |Char list
-|`~w()s` |Word list of strings
+|Sigil |Explaination
+|`~r()` |Regular Expression
+|`~s()` |String (binary)
+|`~c()` |Char list
+|`~w()s` |Word list of strings (binaries)
 |`~w()c` |Word list of char lists
 |`~w()a` |Word list of atoms
 |=================
 
+== Metaprogramming
 
 == Streams?
 
