--- a/elixir_cheatsheet.adoc
+++ b/elixir_cheatsheet.adoc
@@ -29,32 +29,40 @@ https://elixir-lang.org/getting-started/sigils.html
 
 The following escape codes can be used in strings and char lists:
 
+[%autowidth, options="header"]
 |=================
-|\\ – single backslash
-|\a – bell/alert
-|\b – backspace
-|\d - delete
-|\e - escape
-|\f - form feed
-|\n – newline
-|\r – carriage return
-|\s – space
-|\t – tab
-|\v – vertical tab
-|\0 - null byte
-|\xDD - represents a single byte in hexadecimal (such as \x13)
-|\uDDDD and \u{D...} - represents a Unicode codepoint in hexadecimal (such as \u{1F600})
+|Code |Explaination
+|`\\` | single backslash
+|`\a` | bell/alert
+|`\b` | backspace
+|`\d` | delete
+|`\e` | escape
+|`\f` | form feed
+|`\n` | newline
+|`\r` | carriage return
+|`\s` | space
+|`\t` | tab
+|`\v` | vertical tab
+|`\0` | null byte
+|`\xDD` |represents a single byte in hexadecimal (such as \x13)
+|`\uDDDD` and `\u{D...}` |represents a Unicode codepoint in hexadecimal (such as \u{1F600})
 |=================
 
 == Streams?
 
 == Protocols?
 
-== Error Handling
+== Structs?
+
+== Maps and Lists?
+
+== Comprehensions
+
+== Types
 
 == Module Attributes
 
-== Behaviors
+Pattern Matching
 
 [%autowidth, options="header"]
 |=================
